# youtube-reviewer

./: .gitignore  README.md  apphost.cs  apphost.run.json
.github/instructions/: all.instructions.md
app/: chat_client.py  constants.py  main.py  models.py  pyproject.toml  routes.py  telemetry.py  utilities.py  yt_agent.py
app/workflows/: __init__.py  claim_verifier.py  concept_connections.py  key_concepts.py  quiz_generator.py  thesis_argument.py
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
