[project]
name = "FastAPI-starter"
version = "0.1.0"
description = "FastAPI starter"
requires-python = ">=3.13"
dependencies = [
    "agent-framework>=1.0.0b251114",
    "agent-framework-azurefunctions>=1.0.0b251114",
    "azure-identity>=1.25.1",
    "fastapi[standard]>=0.119.0",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "youtube-transcript-api>=1.2.3",
]
